use Map.of, Set.of etc.